Fixes footer layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,10 @@ footer ul {
   margin: 15px;
 }
 
+.bottom-footer {
+  clear: left;
+}
+
 @media only screen and (max-width : 992px) {
   .fancy-image-wrapper img {
     margin-bottom: 15px;
